# microtrainsim

./: .gitignore  FastFloyd.m  addBraking.m  approxMaxMulticommodityFlow.m  constructMovement.m  constructTrajectory.m  flake.nix  fleischer_approximation.m  generateEnvironment.m  graphHeuristicFormulation.m  graph_heuristic_formulation.m  maxMulticommodityFlowApprox.m  maxMulticommodityFlowLP.m  plotSpeedEnvelope.m  plot_trajectory.py  randomConnectedGraph.m  randomGraph.m  randomPlanarGraph.m  random_planar_graph.m  readme.md  simulateEdge.m  structure.drawio  testConstructTrajectory.m  testSimulateEdge.m  test_approxMaxMulticommodityFlow.m  test_maxMulticommodityFlow.m  trainDistance.m
cpp/: CMakeLists.txt  flake.nix
cpp/test/: CMakeLists.txt
matlab/: .gitignore  constructTrajectory.m  constructTransferGraph.m  graphHeuristicFormulation.m  plotDemandFlow.m  testDwellTimeEnforcement.m  testMaxMulticommodityFlow.m  testMovementParametrization.m
network_templates/: crossover.csv  crossover_destinations.csv  crossover_initial_positions.csv  crossover_planned_stops.csv  crossover_speed_limits.csv  crossover_start_nodes.csv
